# mpm-rs

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
core/: Cargo.toml  readme.md
core/src/: lib.rs
core/tests/: bounding_box_test.rs  math_test.rs
doc/: problems.md  readme.md  references.md  roadmap.md
doc/elasticity/: addElasticity.m  addGravity.m  computeGridMomentum.m  computeParticleMomentum.m  computeWeights1D.m  computeWeightsWithGradients1D.m  evolveF.m  fixedCorotated.m  main.m  poissonDisc.m  polarSVD.m  selectInBox.m  setBoundaryVelocities.m  tranferG2P.m  transferP2G.m  updateGridVelocity.m
doc/matlab-elasticity/: addElasticity.m  addGravity.m  computeGridMomentum.m  computeWeights1D.m  computeWeightsWithGradients1D.m  fixedCorotated.m  main.m  poissonDisc.m  selectInBox.m  updateGridVelocity.m
doc/old-bin/: bunny.rs
doc/rust-v1/: driver.rs  math.rs
examples/: Cargo.toml  readme.md  single_ball.rs
examples/examples/: bunny.rs  bunny_x2.rs  mickey_mouse.rs  multi_balls.rs  multi_balls_viewer.rs  rolling_ball.rs  rolling_ball_viewer.rs  rolling_snowball.rs  rolling_snowball_viewer.rs  single_ball.rs  single_ball_viewer.rs  two_bunnies_viewer.rs
examples/src/: lib.rs
lib/msh-rs/: Cargo.toml  readme.md
lib/ply-dump/: Cargo.toml  readme.md
lib/poisson/: Cargo.toml
lib/viewer/: Cargo.toml  readme.md
lib/visualizer/: Cargo.toml
res/: bunny.msh
src/: driver.rs  gen.rs  lib.rs  math.rs  mpm.rs  utils.rs
src/components/: marker.rs  mod.rs  particle.rs
src/resources/: consts.rs  dump_skip.rs  grid.rs  mod.rs  (+1 more)
tests/: test_msh.rs
(+56 files in other folders)
