[package]
name = "mpm_examples"
version = "0.1.0"
authors = ["Liby Lee <liby99@icloud.com>"]
edition = "2018"

[dependencies]
pbr = "1.0.2"
nalgebra = "0.19.0"
mpm-rs = { path = "../core" }
msh-rs = { path = "../lib/msh-rs" }
mpm-ply-dump = { path = "../lib/ply-dump" }
mpm-viewer = { path = "../lib/viewer" }